feat(api): add basic auth support
