# docs/swagger.json
@@ -9,6 +9,12 @@
     "paths": {
         "/v1/feed/{format}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": [],
+                        "BasicAuth": []
+                    }
+                ],
                 "description": "Generates RSS/Atom feed",
                 "consumes": [
                     "application/json"
@@ -49,13 +55,6 @@
                         "name": "item",
                         "in": "query",
                         "required": true
-                    },
-                    {
-                        "type": "string",
-                        "format": "string",
-                        "description": "API Key",
-                        "name": "api-key",
-                        "in": "query"
                     },
                     {
                         "type": "string",
@@ -112,6 +111,16 @@
                 ],
                 "responses": {}
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "api-key",
+            "in": "query"
+        },
+        "BasicAuth": {
+            "type": "basic"
         }
     }
 }
